app/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser.y
-----------------------------------------------------------------------------

state 23 contains 15 shift/reduce conflicts.
state 24 contains 15 shift/reduce conflicts.
state 28 contains 15 shift/reduce conflicts.
state 37 contains 34 shift/reduce conflicts.
state 55 contains 15 shift/reduce conflicts.
state 56 contains 15 shift/reduce conflicts.
state 58 contains 15 shift/reduce conflicts.
state 59 contains 15 shift/reduce conflicts.
state 60 contains 15 shift/reduce conflicts.
state 61 contains 15 shift/reduce conflicts.
state 62 contains 15 shift/reduce conflicts.
state 63 contains 15 shift/reduce conflicts.
state 64 contains 15 shift/reduce conflicts.
state 65 contains 15 shift/reduce conflicts.
state 66 contains 15 shift/reduce conflicts.
state 67 contains 15 shift/reduce conflicts.
state 68 contains 15 shift/reduce conflicts.
state 69 contains 15 shift/reduce conflicts.
state 70 contains 39 reduce/reduce conflicts.
state 71 contains 15 shift/reduce conflicts.
state 75 contains 15 shift/reduce conflicts.
state 83 contains 15 shift/reduce conflicts.
state 84 contains 15 shift/reduce conflicts.
state 95 contains 15 shift/reduce conflicts.
state 98 contains 15 shift/reduce conflicts.
state 99 contains 15 shift/reduce conflicts.
state 101 contains 15 shift/reduce conflicts.
state 102 contains 15 shift/reduce conflicts.

rule 44 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_runHappy -> exprs                           (0)
	exprs ->                                           (1)
	exprs -> expr ';' exprs                            (2)
	expr -> int                                        (3)
	expr -> expr '+' expr                              (4)
	expr -> expr '-' expr                              (5)
	expr -> expr '*' expr                              (6)
	expr -> expr '**' expr                             (7)
	expr -> expr '^' expr                              (8)
	expr -> expr '/' expr                              (9)
	expr -> expr and expr                              (10)
	expr -> expr or expr                               (11)
	expr -> expr '=' expr                              (12)
	expr -> expr '!=' expr                             (13)
	expr -> expr '<' expr                              (14)
	expr -> expr '<=' expr                             (15)
	expr -> expr '>' expr                              (16)
	expr -> expr '>=' expr                             (17)
	expr -> not expr                                   (18)
	expr -> '(' ')'                                    (19)
	expr -> '(' args ')'                               (20)
	expr -> '{' exprs '}'                              (21)
	expr -> '-' int                                    (22)
	expr -> var id '=' expr                            (23)
	expr -> const id '=' expr                          (24)
	expr -> id ':=' expr                               (25)
	expr -> id                                         (26)
	expr -> expr '?'                                   (27)
	expr -> box expr                                   (28)
	expr -> unbox expr                                 (29)
	expr -> expr '<-' expr                             (30)
	expr -> if expr then expr else expr                (31)
	expr -> func id '(' ')' '->' expr                  (32)
	expr -> func id '(' ids ')' '->' expr              (33)
	expr -> func '(' ')' '->' expr                     (34)
	expr -> func '(' ids ')' '->' expr                 (35)
	expr -> expr expr                                  (36)
	expr -> true                                       (37)
	expr -> false                                      (38)
	expr -> int_t                                      (39)
	expr -> bool_t                                     (40)
	expr -> box_t                                      (41)
	expr -> type_t                                     (42)
	expr -> func_t                                     (43)
	apply ->                                           (44)
	args -> expr                                       (45)
	args -> expr ',' args                              (46)
	ids -> id                                          (47)
	ids -> id ',' ids                                  (48)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'+'            { TokenPosn TokPlus (_, _) }
	'-'            { TokenPosn TokMinus (_, _) }
	'*'            { TokenPosn TokStar (_, _) }
	'**'           { TokenPosn TokDoubleStar (_, _) }
	'^'            { TokenPosn TokCaret (_, _) }
	'/'            { TokenPosn TokBackslash (_, _) }
	'='            { TokenPosn TokEq (_, _) }
	'!='           { TokenPosn TokNeq (_, _) }
	'<'            { TokenPosn TokLe (_, _) }
	'<='           { TokenPosn TokLeq (_, _) }
	'>'            { TokenPosn TokGe (_, _) }
	'>='           { TokenPosn TokGeq (_, _) }
	'('            { TokenPosn TokLParen (_, _) }
	')'            { TokenPosn TokRParen (_, _) }
	'<-'           { TokenPosn TokLArrow (_, _) }
	'->'           { TokenPosn TokRArrow (_, _) }
	':='           { TokenPosn TokColEq (_, _) }
	'?'            { TokenPosn TokQuestion (_, _) }
	'{'            { TokenPosn TokLBrace (_, _) }
	'}'            { TokenPosn TokRBrace (_, _) }
	','            { TokenPosn TokComma (_, _) }
	';'            { TokenPosn TokSemicolon (_, _) }
	int            { TokenPosn (TokInt _) (_, _) }
	id             { TokenPosn (TokId _) (_, _) }
	func           { TokenPosn TokFunc (_, _) }
	true           { TokenPosn TokTrue (_, _) }
	false          { TokenPosn TokFalse (_, _) }
	and            { TokenPosn TokAnd (_, _) }
	or             { TokenPosn TokOr (_, _) }
	not            { TokenPosn TokNot (_, _) }
	if             { TokenPosn TokIf (_, _) }
	then           { TokenPosn TokThen (_, _) }
	else           { TokenPosn TokElse (_, _) }
	var            { TokenPosn TokVar (_, _) }
	const          { TokenPosn TokConst (_, _) }
	box            { TokenPosn TokBox (_, _) }
	unbox          { TokenPosn TokUnbox (_, _) }
	int_t          { TokenPosn TokIntT (_, _) }
	bool_t         { TokenPosn TokBoolT (_, _) }
	box_t          { TokenPosn TokBoxT (_, _) }
	type_t         { TokenPosn TokTypeT (_, _) }
	func_t         { TokenPosn TokFuncT (_, _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_runHappy rule  0
	exprs           rules 1, 2
	expr            rules 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43
	apply           rule  44
	args            rules 45, 46
	ids             rules 47, 48

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_runHappy -> . exprs                          (rule 0)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22
	%eof           reduce using rule 1

	exprs          goto state 2
	expr           goto state 3

State 1

	exprs -> .                                          (rule 1)



State 2

	%start_runHappy -> exprs .                          (rule 0)

	%eof           accept


State 3

	exprs -> expr . ';' exprs                           (rule 2)
	expr -> expr . '+' expr                             (rule 4)
	expr -> expr . '-' expr                             (rule 5)
	expr -> expr . '*' expr                             (rule 6)
	expr -> expr . '**' expr                            (rule 7)
	expr -> expr . '^' expr                             (rule 8)
	expr -> expr . '/' expr                             (rule 9)
	expr -> expr . and expr                             (rule 10)
	expr -> expr . or expr                              (rule 11)
	expr -> expr . '=' expr                             (rule 12)
	expr -> expr . '!=' expr                            (rule 13)
	expr -> expr . '<' expr                             (rule 14)
	expr -> expr . '<=' expr                            (rule 15)
	expr -> expr . '>' expr                             (rule 16)
	expr -> expr . '>=' expr                            (rule 17)
	expr -> expr . '?'                                  (rule 27)
	expr -> expr . '<-' expr                            (rule 30)
	expr -> expr . expr                                 (rule 36)

	'+'            shift, and enter state 38
	'-'            shift, and enter state 39
	'*'            shift, and enter state 40
	'**'           shift, and enter state 41
	'^'            shift, and enter state 42
	'/'            shift, and enter state 43
	'='            shift, and enter state 44
	'!='           shift, and enter state 45
	'<'            shift, and enter state 46
	'<='           shift, and enter state 47
	'>'            shift, and enter state 48
	'>='           shift, and enter state 49
	'('            shift, and enter state 5
	'<-'           shift, and enter state 50
	'?'            shift, and enter state 51
	'{'            shift, and enter state 6
	';'            shift, and enter state 52
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	and            shift, and enter state 53
	or             shift, and enter state 54
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 37

State 4

	expr -> '-' . int                                   (rule 22)

	int            shift, and enter state 36


State 5

	expr -> '(' . ')'                                   (rule 19)
	expr -> '(' . args ')'                              (rule 20)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	')'            shift, and enter state 35
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 33
	args           goto state 34

State 6

	expr -> '{' . exprs '}'                             (rule 21)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	'}'            reduce using rule 1
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	exprs          goto state 32
	expr           goto state 3

State 7

	expr -> int .                                       (rule 3)

	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'*'            reduce using rule 3
	'**'           reduce using rule 3
	'^'            reduce using rule 3
	'/'            reduce using rule 3
	'='            reduce using rule 3
	'!='           reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'<-'           reduce using rule 3
	'?'            reduce using rule 3
	'{'            reduce using rule 3
	','            reduce using rule 3
	';'            reduce using rule 3
	int            reduce using rule 3
	id             reduce using rule 3
	func           reduce using rule 3
	true           reduce using rule 3
	false          reduce using rule 3
	and            reduce using rule 3
	or             reduce using rule 3
	not            reduce using rule 3
	if             reduce using rule 3
	then           reduce using rule 3
	else           reduce using rule 3
	var            reduce using rule 3
	const          reduce using rule 3
	box            reduce using rule 3
	unbox          reduce using rule 3
	int_t          reduce using rule 3
	bool_t         reduce using rule 3
	box_t          reduce using rule 3
	type_t         reduce using rule 3
	func_t         reduce using rule 3


State 8

	expr -> id . ':=' expr                              (rule 25)
	expr -> id .                                        (rule 26)

	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'**'           reduce using rule 26
	'^'            reduce using rule 26
	'/'            reduce using rule 26
	'='            reduce using rule 26
	'!='           reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'<-'           reduce using rule 26
	':='           shift, and enter state 31
	'?'            reduce using rule 26
	'{'            reduce using rule 26
	','            reduce using rule 26
	';'            reduce using rule 26
	int            reduce using rule 26
	id             reduce using rule 26
	func           reduce using rule 26
	true           reduce using rule 26
	false          reduce using rule 26
	and            reduce using rule 26
	or             reduce using rule 26
	not            reduce using rule 26
	if             reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	var            reduce using rule 26
	const          reduce using rule 26
	box            reduce using rule 26
	unbox          reduce using rule 26
	int_t          reduce using rule 26
	bool_t         reduce using rule 26
	box_t          reduce using rule 26
	type_t         reduce using rule 26
	func_t         reduce using rule 26


State 9

	expr -> func . id '(' ')' '->' expr                 (rule 32)
	expr -> func . id '(' ids ')' '->' expr             (rule 33)
	expr -> func . '(' ')' '->' expr                    (rule 34)
	expr -> func . '(' ids ')' '->' expr                (rule 35)

	'('            shift, and enter state 29
	id             shift, and enter state 30


State 10

	expr -> true .                                      (rule 37)

	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'*'            reduce using rule 37
	'**'           reduce using rule 37
	'^'            reduce using rule 37
	'/'            reduce using rule 37
	'='            reduce using rule 37
	'!='           reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'<-'           reduce using rule 37
	'?'            reduce using rule 37
	'{'            reduce using rule 37
	','            reduce using rule 37
	';'            reduce using rule 37
	int            reduce using rule 37
	id             reduce using rule 37
	func           reduce using rule 37
	true           reduce using rule 37
	false          reduce using rule 37
	and            reduce using rule 37
	or             reduce using rule 37
	not            reduce using rule 37
	if             reduce using rule 37
	then           reduce using rule 37
	else           reduce using rule 37
	var            reduce using rule 37
	const          reduce using rule 37
	box            reduce using rule 37
	unbox          reduce using rule 37
	int_t          reduce using rule 37
	bool_t         reduce using rule 37
	box_t          reduce using rule 37
	type_t         reduce using rule 37
	func_t         reduce using rule 37


State 11

	expr -> false .                                     (rule 38)

	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'*'            reduce using rule 38
	'**'           reduce using rule 38
	'^'            reduce using rule 38
	'/'            reduce using rule 38
	'='            reduce using rule 38
	'!='           reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'<-'           reduce using rule 38
	'?'            reduce using rule 38
	'{'            reduce using rule 38
	','            reduce using rule 38
	';'            reduce using rule 38
	int            reduce using rule 38
	id             reduce using rule 38
	func           reduce using rule 38
	true           reduce using rule 38
	false          reduce using rule 38
	and            reduce using rule 38
	or             reduce using rule 38
	not            reduce using rule 38
	if             reduce using rule 38
	then           reduce using rule 38
	else           reduce using rule 38
	var            reduce using rule 38
	const          reduce using rule 38
	box            reduce using rule 38
	unbox          reduce using rule 38
	int_t          reduce using rule 38
	bool_t         reduce using rule 38
	box_t          reduce using rule 38
	type_t         reduce using rule 38
	func_t         reduce using rule 38


State 12

	expr -> not . expr                                  (rule 18)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 28

State 13

	expr -> if . expr then expr else expr               (rule 31)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 27

State 14

	expr -> var . id '=' expr                           (rule 23)

	id             shift, and enter state 26


State 15

	expr -> const . id '=' expr                         (rule 24)

	id             shift, and enter state 25


State 16

	expr -> box . expr                                  (rule 28)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 24

State 17

	expr -> unbox . expr                                (rule 29)

	'-'            shift, and enter state 4
	'('            shift, and enter state 5
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	not            shift, and enter state 12
	if             shift, and enter state 13
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 23

State 18

	expr -> int_t .                                     (rule 39)

	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'**'           reduce using rule 39
	'^'            reduce using rule 39
	'/'            reduce using rule 39
	'='            reduce using rule 39
	'!='           reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'<-'           reduce using rule 39
	'?'            reduce using rule 39
	'{'            reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	int            reduce using rule 39
	id             reduce using rule 39
	func           reduce using rule 39
	true           reduce using rule 39
	false          reduce using rule 39
	and            reduce using rule 39
	or             reduce using rule 39
	not            reduce using rule 39
	if             reduce using rule 39
	then           reduce using rule 39
	else           reduce using rule 39
	var            reduce using rule 39
	const          reduce using rule 39
	box            reduce using rule 39
	unbox          reduce using rule 39
	int_t          reduce using rule 39
	bool_t         reduce using rule 39
	box_t          reduce using rule 39
	type_t         reduce using rule 39
	func_t         reduce using rule 39


State 19

	expr -> bool_t .                                    (rule 40)

	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'**'           reduce using rule 40
	'^'            reduce using rule 40
	'/'            reduce using rule 40
	'='            reduce using rule 40
	'!='           reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'<-'           reduce using rule 40
	'?'            reduce using rule 40
	'{'            reduce using rule 40
	','            reduce using rule 40
	';'            reduce using rule 40
	int            reduce using rule 40
	id             reduce using rule 40
	func           reduce using rule 40
	true           reduce using rule 40
	false          reduce using rule 40
	and            reduce using rule 40
	or             reduce using rule 40
	not            reduce using rule 40
	if             reduce using rule 40
	then           reduce using rule 40
	else           reduce using rule 40
	var            reduce using rule 40
	const          reduce using rule 40
	box            reduce using rule 40
	unbox          reduce using rule 40
	int_t          reduce using rule 40
	bool_t         reduce using rule 40
	box_t          reduce using rule 40
	type_t         reduce using rule 40
	func_t         reduce using rule 40


State 20

	expr -> box_t .                                     (rule 41)

	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'*'            reduce using rule 41
	'**'           reduce using rule 41
	'^'            reduce using rule 41
	'/'            reduce using rule 41
	'='            reduce using rule 41
	'!='           reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'<-'           reduce using rule 41
	'?'            reduce using rule 41
	'{'            reduce using rule 41
	','            reduce using rule 41
	';'            reduce using rule 41
	int            reduce using rule 41
	id             reduce using rule 41
	func           reduce using rule 41
	true           reduce using rule 41
	false          reduce using rule 41
	and            reduce using rule 41
	or             reduce using rule 41
	not            reduce using rule 41
	if             reduce using rule 41
	then           reduce using rule 41
	else           reduce using rule 41
	var            reduce using rule 41
	const          reduce using rule 41
	box            reduce using rule 41
	unbox          reduce using rule 41
	int_t          reduce using rule 41
	bool_t         reduce using rule 41
	box_t          reduce using rule 41
	type_t         reduce using rule 41
	func_t         reduce using rule 41


State 21

	expr -> type_t .                                    (rule 42)

	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'**'           reduce using rule 42
	'^'            reduce using rule 42
	'/'            reduce using rule 42
	'='            reduce using rule 42
	'!='           reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'<-'           reduce using rule 42
	'?'            reduce using rule 42
	'{'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	int            reduce using rule 42
	id             reduce using rule 42
	func           reduce using rule 42
	true           reduce using rule 42
	false          reduce using rule 42
	and            reduce using rule 42
	or             reduce using rule 42
	not            reduce using rule 42
	if             reduce using rule 42
	then           reduce using rule 42
	else           reduce using rule 42
	var            reduce using rule 42
	const          reduce using rule 42
	box            reduce using rule 42
	unbox          reduce using rule 42
	int_t          reduce using rule 42
	bool_t         reduce using rule 42
	box_t          reduce using rule 42
	type_t         reduce using rule 42
	func_t         reduce using rule 42


State 22

	expr -> func_t .                                    (rule 43)

	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'**'           reduce using rule 43
	'^'            reduce using rule 43
	'/'            reduce using rule 43
	'='            reduce using rule 43
	'!='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'<-'           reduce using rule 43
	'?'            reduce using rule 43
	'{'            reduce using rule 43
	','            reduce using rule 43
	';'            reduce using rule 43
	int            reduce using rule 43
	id             reduce using rule 43
	func           reduce using rule 43
	true           reduce using rule 43
	false          reduce using rule 43
	and            reduce using rule 43
	or             reduce using rule 43
	not            reduce using rule 43
	if             reduce using rule 43
	then           reduce using rule 43
	else           reduce using rule 43
	var            reduce using rule 43
	const          reduce using rule 43
	box            reduce using rule 43
	unbox          reduce using rule 43
	int_t          reduce using rule 43
	bool_t         reduce using rule 43
	box_t          reduce using rule 43
	type_t         reduce using rule 43
	func_t         reduce using rule 43


State 23

	expr -> expr . '+' expr                             (rule 4)
	expr -> expr . '-' expr                             (rule 5)
	expr -> expr . '*' expr                             (rule 6)
	expr -> expr . '**' expr                            (rule 7)
	expr -> expr . '^' expr                             (rule 8)
	expr -> expr . '/' expr                             (rule 9)
	expr -> expr . and expr                             (rule 10)
	expr -> expr . or expr                              (rule 11)
	expr -> expr . '=' expr                             (rule 12)
	expr -> expr . '!=' expr                            (rule 13)
	expr -> expr . '<' expr                             (rule 14)
	expr -> expr . '<=' expr                            (rule 15)
	expr -> expr . '>' expr                             (rule 16)
	expr -> expr . '>=' expr                            (rule 17)
	expr -> expr . '?'                                  (rule 27)
	expr -> unbox expr .                                (rule 29)
	expr -> expr . '<-' expr                            (rule 30)
	expr -> expr . expr                                 (rule 36)

	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'**'           reduce using rule 29
	'^'            reduce using rule 29
	'/'            reduce using rule 29
	'='            reduce using rule 29
	'!='           reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'('            shift, and enter state 5
			(reduce using rule 29)

	')'            reduce using rule 29
	'<-'           reduce using rule 29
	'?'            shift, and enter state 51
	'{'            shift, and enter state 6
			(reduce using rule 29)

	','            reduce using rule 29
	';'            reduce using rule 29
	int            shift, and enter state 7
			(reduce using rule 29)

	id             shift, and enter state 8
			(reduce using rule 29)

	func           shift, and enter state 9
			(reduce using rule 29)

	true           shift, and enter state 10
			(reduce using rule 29)

	false          shift, and enter state 11
			(reduce using rule 29)

	and            reduce using rule 29
	or             reduce using rule 29
	not            shift, and enter state 12
	if             shift, and enter state 13
			(reduce using rule 29)

	then           reduce using rule 29
	else           reduce using rule 29
	var            shift, and enter state 14
			(reduce using rule 29)

	const          shift, and enter state 15
			(reduce using rule 29)

	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
			(reduce using rule 29)

	bool_t         shift, and enter state 19
			(reduce using rule 29)

	box_t          shift, and enter state 20
			(reduce using rule 29)

	type_t         shift, and enter state 21
			(reduce using rule 29)

	func_t         shift, and enter state 22
			(reduce using rule 29)


	expr           goto state 37

State 24

	expr -> expr . '+' expr                             (rule 4)
	expr -> expr . '-' expr                             (rule 5)
	expr -> expr . '*' expr                             (rule 6)
	expr -> expr . '**' expr                            (rule 7)
	expr -> expr . '^' expr                             (rule 8)
	expr -> expr . '/' expr                             (rule 9)
	expr -> expr . and expr                             (rule 10)
	expr -> expr . or expr                              (rule 11)
	expr -> expr . '=' expr                             (rule 12)
	expr -> expr . '!=' expr                            (rule 13)
	expr -> expr . '<' expr                             (rule 14)
	expr -> expr . '<=' expr                            (rule 15)
	expr -> expr . '>' expr                             (rule 16)
	expr -> expr . '>=' expr                            (rule 17)
	expr -> expr . '?'                                  (rule 27)
	expr -> box expr .                                  (rule 28)
	expr -> expr . '<-' expr                            (rule 30)
	expr -> expr . expr                                 (rule 36)

	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'**'           reduce using rule 28
	'^'            reduce using rule 28
	'/'            reduce using rule 28
	'='            reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'('            shift, and enter state 5
			(reduce using rule 28)

	')'            reduce using rule 28
	'<-'           reduce using rule 28
	'?'            shift, and enter state 51
	'{'            shift, and enter state 6
			(reduce using rule 28)

	','            reduce using rule 28
	';'            reduce using rule 28
	int            shift, and enter state 7
			(reduce using rule 28)

	id             shift, and enter state 8
			(reduce using rule 28)

	func           shift, and enter state 9
			(reduce using rule 28)

	true           shift, and enter state 10
			(reduce using rule 28)

	false          shift, and enter state 11
			(reduce using rule 28)

	and            reduce using rule 28
	or             reduce using rule 28
	not            shift, and enter state 12
	if             shift, and enter state 13
			(reduce using rule 28)

	then           reduce using rule 28
	else           reduce using rule 28
	var            shift, and enter state 14
			(reduce using rule 28)

	const          shift, and enter state 15
			(reduce using rule 28)

	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
			(reduce using rule 28)

	bool_t         shift, and enter state 19
			(reduce using rule 28)

	box_t          shift, and enter state 20
			(reduce using rule 28)

	type_t         shift, and enter state 21
			(reduce using rule 28)

	func_t         shift, and enter state 22
			(reduce using rule 28)


	expr           goto state 37

State 25

	expr -> const id . '=' expr                         (rule 24)

	'='            shift, and enter state 82


State 26

	expr -> var id . '=' expr                           (rule 23)

	'='            shift, and enter state 81


State 27

	expr -> expr . '+' expr                             (rule 4)
	expr -> expr . '-' expr                             (rule 5)
	expr -> expr . '*' expr                             (rule 6)
	expr -> expr . '**' expr                            (rule 7)
	expr -> expr . '^' expr                             (rule 8)
	expr -> expr . '/' expr                             (rule 9)
	expr -> expr . and expr                             (rule 10)
	expr -> expr . or expr                              (rule 11)
	expr -> expr . '=' expr                             (rule 12)
	expr -> expr . '!=' expr                            (rule 13)
	expr -> expr . '<' expr                             (rule 14)
	expr -> expr . '<=' expr                            (rule 15)
	expr -> expr . '>' expr                             (rule 16)
	expr -> expr . '>=' expr                            (rule 17)
	expr -> expr . '?'                                  (rule 27)
	expr -> expr . '<-' expr                            (rule 30)
	expr -> if expr . then expr else expr               (rule 31)
	expr -> expr . expr                                 (rule 36)

	'+'            shift, and enter state 38
	'-'            shift, and enter state 39
	'*'            shift, and enter state 40
	'**'           shift, and enter state 41
	'^'            shift, and enter state 42
	'/'            shift, and enter state 43
	'='            shift, and enter state 44
	'!='           shift, and enter state 45
	'<'            shift, and enter state 46
	'<='           shift, and enter state 47
	'>'            shift, and enter state 48
	'>='           shift, and enter state 49
	'('            shift, and enter state 5
	'<-'           shift, and enter state 50
	'?'            shift, and enter state 51
	'{'            shift, and enter state 6
	int            shift, and enter state 7
	id             shift, and enter state 8
	func           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	and            shift, and enter state 53
	or             shift, and enter state 54
	not            shift, and enter state 12
	if             shift, and enter state 13
	then           shift, and enter state 80
	var            shift, and enter state 14
	const          shift, and enter state 15
	box            shift, and enter state 16
	unbox          shift, and enter state 17
	int_t          shift, and enter state 18
	bool_t         shift, and enter state 19
	box_t          shift, and enter state 20
	type_t         shift, and enter state 21
	func_t         shift, and enter state 22

	expr           goto state 37

State 28

	expr -> expr . '+' expr                             (rule 4)
	expr -> expr . '-' expr                             (rule 5)
	expr -> expr . '*' expr                             (rule 6)
	expr -> expr . '**' expr                            (rule 7)
	expr -> expr . '^' expr                             (rule 8)
	expr -> expr . '/' expr                             (rule 9)
	expr -> expr . and expr                             (rule 10)
	expr -> expr . or expr                              (rule 11)
	expr -> expr . '=' expr                             (rule 12)
	expr -> expr . '!=' expr                            (rule 13)
	expr -> expr . '<' expr                             (rule 14)
	expr -> expr . '<=' expr                            (rule 15)
	expr -> expr . '>' expr                             (rule 16)
	expr -> expr . '>=' expr                            (rule 17)
	expr -> not expr .                                  (rule 18)
	expr -> expr . '?'                                  (rule 27)
	expr -> expr . '<-' expr                            (rule 30)
	expr -> expr . expr                                 (rule 36)
